@@ -243,15 +243,17 @@ configFile = E:/ioFTPD/scripts/ioA/ioA.cfg
 # Info: Announce log events and query databases used by nxTools.
 # Path: modules/ioftpd/nxtools
 #
-# cmdPrefix  - Command prefix for commands specific to this module. The
-#              default prefix will be used if this option is undefined.
-# configFile - nxTools' configuration file.
-# dataPath   - Database path, this option cannot be read from nxTools.cfg
-#              because of relative path translation issues.
+# cmdPrefix   - Command prefix for commands specific to this module. The
+#               default prefix will be used if this option is undefined.
+# dataPath    - Path to the nxTools database directory.
+# undupeChars - Required number of alphanumeric characters when wildcards are used.
+# undupeWild  - Allow wildcards in the undupe search pattern. If you allow all users
+#               access to this command, it's recommended you disable this option.
 #
 [Module::NxTools]
-configFile = E:/ioFTPD/scripts/nxTools/nxTools.cfg
-dataPath   = E:/ioFTPD/scripts/nxTools/data/
+dataPath    = E:/ioFTPD/scripts/nxTools/data/
+undupeChars = 5
+undupeWild  = True
 
 #### Module: Online
 #
